# competitor-dashboard

./: .env.example  .gitignore  .replit  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  EMBEDDINGS_PLAN.md  GEMINI.md  README.md  WINDOWS-FIX-SUMMARY.md  WINDOWS-PORTABLE-COMPLETE.md  build-windows-portable.js  build_output.txt  complete-standalone.cjs  create-distribution.sh  create-unbundled-windows.sh  create-windows-zip.sh  electron-main.cjs  electron-only.cjs  electron-preload.cjs  electron.js  fix-prisma-windows.js  fix-windows-query-engine.sh  full-production-launcher.cjs  index.html  launcher.cjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  production-launcher.cjs  real-standalone.cjs  run-electron-global.cjs  run-electron-npx.cjs  run-electron.cjs  settings.json  standalone-server.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-windows-portable.yml  build.yml
dist-pkg/: README.txt  cleanup-port.sh
dist-pkg/prisma/: schema.prisma
dist-pkg/server/: index.ts
electron/: main.js
prisma/: schema.prisma
server/: index.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app.backup/: layout.tsx  stat.tsx
src/app.backup/(app)/: application-layout.tsx  page.tsx
src/app/(app)/alerts/: page.tsx
src/components/: application-layout.tsx  link.tsx
src/lib/: api.ts  embeddings.ts
src/pages/: Alerts.tsx  ComparisonItems.tsx  Competitors.tsx  Dashboard.tsx  Help.tsx  PriceComparison.tsx  Settings.tsx
src/types/: global.d.ts
(+27 files in other folders)
