[package]
name = "competitor-dashboard"
version = "0.1.0"
description = "A Tauri App for monitoring competitor prices"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Feature to show console window for debugging on Windows
debug-console = []
